--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -168,7 +168,7 @@ nav,
 /* ABOUT US */
 
 .section-divider-top {
-    background-image: url(resources/images/svg/layered-waves-haikei-top.svg);
+    background-image: url('./resources/images/svg/layered-waves-haikei-top.svg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
@@ -177,7 +177,7 @@ nav,
 }
 
 .section-divider-bottom {
-    background-image: url(resources/images/svg/layered-waves-haikei-bottom.svg);
+    background-image: url('.resources/images/svg/layered-waves-haikei-bottom.svg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center bottom;
