--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -3,7 +3,7 @@
 /* HOME PAGE */
 
 .cover {
-    background-image: url(../images/1920x1080-webp/04\ -\ Ryans\ Waterblasting\ Photos_1920px.webp);
+    background-image: url(/resources/images/1920x1080-webp/04\ -\ Ryans\ Waterblasting\ Photos_1920px.webp);
     background-position: 15% 15%;
     background-repeat: no-repeat;
     background-size: cover;
